glFusion ChangeLog

v1.1.0
------------
- Updated some Command n Control icons - thx EdCates! (Eric)
		public_html/forum/images/forum.png
		public_html/layout/nouveau/images/icons/docs.png
		public_html/layout/nouveau/images/icons/mail.png
		public_html/layout/nouveau/images/icons/plugins.png
		public_html/layout/nouveau/images/icons/syndication.png
		public_html/layout/nouveau/images/icons/topic.png
		public_html/layout/nouveau/images/icons/versioncheck.png
		public_html/polls/images/polls.png
		public_html/staticpages/images/staticpages.png

- Updated glFusion Wiki link to point to the gllabs wiki root instead of gllabs.org (Eric)
		public_html/docs/config.html
		public_html/docs/index.html
		public_html/docs/install.html

- Fixed slider height issue and added border in menu colorpicker (Eric)
		public_html/admin/plugins/sitetailor/css/mooRainbow.css

- Adjusted layout of comments for better readability (Eric)
		public_html/layout/nouveau/comment/comment.thtml
		public_html/layout/nouveau/comment/commentbar.thtml
		public_html/layout/nouveau/comment/thread.thtml

- Implemented glFusion CSS layout driven header / footer functions.
        public_html/lib-common.php
        public_html/layout/nouveau/functions.php
        public_html/layout/professional/functions.php

- Bumped version number to 1.1.0svn
        public_html/lib-common.php

v1.0.1
------
- Fixed menu alignment
        public_html/layout/nouveau/functions.php
        public_html/layout/nouveau/htmlheader.thtml

- New advanced editor toolbar.  Modified user submitted story editor
  menu to have more advanced features, but it is missing the
  image / mediagallery insert.
        public_html/fckeditor/myconfig.js
        public_html/javascript/submitstory_fckeditor.js

- New user create / delete hooks CUSTOM_createUserHook($uid) and
  CUSTOM_deleteUserHook($uid)
        private/system/lib-user.php
        private/system/lib-custom.php.dist
