@@ -3,60 +3,97 @@ This file only contains CSS fixes for the IE 6 browser. For regular style info u
  */
 
 #gl_navigation { /*the leftblocks*/
-  background:#000;
-  border-bottom:0;
-  border-left:0;
-  border-top:0;
+	background:#000;
+	border-bottom:0;
+	border-left:0;
+	border-top:0;
 }
 #gl_container_fixed #gl_navigation {
-  padding-left:0;
+	padding-left:0;
 }
 #gl_container_fluid #gl_navigation{
-  padding-left:40px;
+	padding-left:40px;
 }
 #gl_extra { /*the rightblocks*/
-  border-bottom:0;
+	border-bottom:0;
 }
 #gl_moomenu {
-  height:2.2em; /*set to 54px if you use 2 row menus*/
-  background:url(../images/gl_moomenu1-bg.png)repeat;
+	height:2.2em; /*set to 54px if you use 2 row menus*/
+	background:url(../images/gl_moomenu1-bg.png)repeat;
 }
 .gl_moomenu li:hover,
 .gl_moomenu li a:hover{
-  background:url(../images/gl_moomenu1-hover.gif) repeat;
+	background:url(../images/gl_moomenu1-hover.gif) repeat;
 }
 #gl_moomenu li li a.parent,
 #gl_moomenu li li a.parent:hover {
-  background:url(../images/gl_moomenu1-parent_ie6.gif) 95% 50% no-repeat;
+	background:url(../images/gl_moomenu1-parent_ie6.gif) 95% 50% no-repeat;
 }
 .gl_moomenu li ul {
-  width:177px;
+	width:177px;
 }
 .block-columnpad {
-  background:#F7F7F7;
-  border-bottom:1px solid #CCCCCC;
-  height:1%;
+	background:#F7F7F7;
+	border-bottom:1px solid #CCCCCC;
+	height:1%;
 }
 .bottom-r-corner {
-  background:#FFF url(../images/bottom-r-corner.png) 100% 10px no-repeat;
+	background:#FFF url(../images/bottom-r-corner.png) 100% 10px no-repeat;
 }
 .bottom-l-corner {
-  background:transparent url(../images/bottom-l-corner.png) 0 10px no-repeat;
+	background:transparent url(../images/bottom-l-corner.png) 0 10px no-repeat;
 }
 pre {
-  font-size:80%;
-  overflow:scroll;
+	font-size:80%;
+	overflow:scroll;
 }
 div#frame div.button#left {
-  background: url(../images/prev_ie6.png) no-repeat;
+	background: url(../images/prev_ie6.png) no-repeat;
 }
 div#frame div.button#right {
-  background: url(../images/next_ie6.png) no-repeat;
+	background: url(../images/next_ie6.png) no-repeat;
 }
 #gl_mooticker ul {
-  margin:0 0 5px 120px;
+	margin:0 0 5px 120px;
 }
 #gl_moorotator .controls img,
 #gl_mooticker .controls img {
-  background-image:url(../images/gl_mooticker_controls_ie6.png);
+	background-image:url(../images/gl_mooticker_controls_ie6.png);
 }
+
+/* ie6 warning  javascript*/
+#iewarn {
+	background:#C6D3DA url(../images/error.png) 10px 20px no-repeat;
+	position:relative;
+	z-index:1;
+	opacity:0;
+	margin:-150px auto 0;
+	font-size:110%;
+	color:#001D29;
+}
+#iewarn div {
+	position:relative;
+	border-top:5px solid #95B8C9;
+	border-bottom:5px solid #95B8C9;
+	padding:10px 80px 10px 240px;	
+}
+#iewarn h4 {
+	color:#e2494b;
+	font-weight:bold;
+	line-height:120%;
+}
+#iewarn a {
+	color:#296AC6;
+	font-weight:bold;
+}
+#iewarn_close {
+	background:url(../images/close.png) 50% 50% no-repeat;
+	display:block;
+	cursor:pointer;
+	position:absolute;
+	width:61px;
+	height:21px;
+	top:25px;
+	right:12px;
+}
+/* end ie6 warning */
